--- a/src/components/homestyle.module.css
+++ b/src/components/homestyle.module.css
@@ -16,7 +16,7 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 30px;
   background-color: #333;
   /* Altere a cor de fundo conforme necessário */
   color: white;
@@ -40,33 +40,29 @@ h2 {
 
 /* Estilo para os itens de menu */
 .Header li {
-  margin-right: 20px;
-  /* Espaçamento entre os itens de menu */
+ padding-right: 15px;
+
 }
 
-/* Estilo para os links de menu */
+
 .Header a {
   text-decoration: none;
   color: white;
-  /* Cor do texto dos links */
   font-weight: bold;
-  /* Texto em negrito */
 }
 
-/* Estilo para o link de "Entrar" */
+
 .Header a[href="http://localhost:3000/login"] {
   background-color: #ff5733;
-  /* Cor de fundo do link de Entrar */
   padding: 5px 10px;
   border-radius: 5px;
   color: white;
-  /* Cor do texto do link de Entrar */
   transition: background-color 0.3s;
-  /* Transição suave de cor */
+  
 }
 
-/* Estilo de hover para o link de "Entrar" */
+
 .Header a[href="http://localhost:3000/login"]:hover {
   background-color: #ff3e0f;
-  /* Cor de fundo do link de Entrar ao passar o mouse */
+  
 }
